<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_docking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <!-- <exec_depend>python3-do-mpc-pip</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
